Fixed ball collision feature That took me a while

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <title>Breakout 2088: Etch the sketch</title>
 </head>
 <body>
+
     <div class="container"></div>
+    <div class="button">Reset</div>
+    <div class="ball"></div>
 </body>
 </html>
