--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
     <title>Breakout 2088: Etch the sketch</title>
 </head>
 <body>
+    <div class="header">Breakout Etch a Sketch</div>
+    <div class="reset">
+        <div class="container"></div>
+    </div>
 
-    <div class="container"></div>
+
     <div class="button">Reset</div>
     <div class="ball"></div>
 </body>
