--- a/index.html
+++ b/index.html
@@ -10,13 +10,18 @@
     <title>Breakout 2088: Etch the sketch</title>
 </head>
 <body>
-    <div class="header">Breakout Etch a Sketch</div>
+    <div class="top">
+
+        <div class="header">Breakout Etch a Sketch by Lx. Li 2023 </div>
+        <div class="header button">Reset</div>
+    </div>
+    
     <div class="reset">
         <div class="container"></div>
     </div>
 
 
-    <div class="button">Reset</div>
+
     <div class="ball"></div>
 </body>
 </html>
